--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    
   </head>
   <body>
-    <h1>첫번쨰 프로젝트입니다</h1>
-    <p>내용</p>
+  <H1>소주게임</H1>
+  <p id="bull">숫자를맞춰보세요</p>
+  <div id="left_life">남은 목숨 : 5</div>
+  <input id="user_number" type="number">
+  <button id="btn">!!GO!!</button>
+  <button id="rst">RESET</button>
+
+
+
+    <script src="main.js"></script>
   </body>
 </html>
