--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     
   </head>
   <body>
-  <H1>소주게임</H1>
-  <p id="bull">숫자를맞춰보세요</p>
-  <div id="left_life">남은 목숨 : 5</div>
-  <input id="user_number" type="number">
-  <button id="btn">!!GO!!</button>
-  <button id="rst">RESET</button>
-
+    <div class="container">
+      <H1>숫자 맞추기 게임</H1>
+      <div id="bull">
+        <span>숫자를맞춰보세요</span>
+      </div>
+      <div id="left_life">남은 목숨 : 5</div>
+      <input id="user_number" type="number">
+      <button id="btn">!!GO!!</button>
+      <button id="rst">RESET</button>
+    </div>
 
 
     <script src="main.js"></script>
